isses_2: added .gitignore, pulled LaunchScreen.storyboard, cleared strings in PNTTodoListViewController.m, sel -> cell

--- a/Todolist/PNTTodoListViewController.storyboard
+++ b/Todolist/PNTTodoListViewController.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="sel" id="vnV-QT-PQd">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="vnV-QT-PQd">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vnV-QT-PQd" id="Ndb-Cr-tmL">
@@ -33,6 +33,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Todolist" id="dlh-u2-JfG"/>
+                    <connections>
+                        <outlet property="todoesUITable" destination="Z0z-hg-2FX" id="IcA-17-4rF"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="90b-d6-e6M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
