--- a/Todolist/PNTTodoListViewController.storyboard
+++ b/Todolist/PNTTodoListViewController.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Todo List View Controller-->
+        <!--Todos-->
         <scene sceneID="bO8-dw-h5L">
             <objects>
-                <viewController id="Fuj-Ph-f3e" customClass="PNTTodoListViewController" sceneMemberID="viewController">
+                <viewController title="Todos" id="Fuj-Ph-f3e" customClass="PNTTodoListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="l46-o0-BUs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
